[gd_scene load_steps=18 format=3 uid="uid://dy7asljtall0c"]

[ext_resource type="Script" uid="uid://mmuh8ykq3kp2" path="res://code/components/slider.gd" id="1_0kyjx"]
[ext_resource type="PackedScene" uid="uid://4ev7n8xin8g8" path="res://scenes/button3d.tscn" id="2_h2hu0"]
[ext_resource type="Material" uid="uid://cq0u3gxxgm3m4" path="res://materials/button/more.tres" id="3_h2hu0"]
[ext_resource type="Material" uid="uid://ygt2tr4mwdlq" path="res://materials/button/less.tres" id="4_5h15h"]
[ext_resource type="PackedScene" uid="uid://c80fsqccc2hnu" path="res://scenes/connection.tscn" id="5_awiax"]
[ext_resource type="PackedScene" uid="uid://djd85005dvf4k" path="res://scenes/components/signal_connection.tscn" id="6_n3ijd"]
[ext_resource type="PackedScene" uid="uid://cho6nbfhnljf4" path="res://scenes/components/signal_control.tscn" id="7_5h15h"]
[ext_resource type="Script" uid="uid://cne7gq7x08cg7" path="res://code/components/slider_display.gd" id="7_h2hu0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jc46c"]
size = Vector3(0.3, 0.1, 0.3)

[sub_resource type="QuadMesh" id="QuadMesh_5sv2v"]
size = Vector2(0.25, 0.25)
center_offset = Vector3(0, 0.01, 0)
orientation = 1

[sub_resource type="QuadMesh" id="QuadMesh_0kyjx"]
size = Vector2(0.104, 0.28)

[sub_resource type="ViewportTexture" id="ViewportTexture_0kyjx"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h2hu0"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_0kyjx")

[sub_resource type="BoxMesh" id="BoxMesh_0kyjx"]
size = Vector3(0.3, 0.1, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8dutg"]
albedo_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_3fopc"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="SphereShape3D" id="SphereShape3D_swh12"]
radius = 0.1

[node name="Slider" type="Node3D"]
script = ExtResource("1_0kyjx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.05, 0.25)
shape = SubResource("BoxShape3D_jc46c")

[node name="StatusText" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-0.3, -4.5298744e-08, -1.980071e-15, 0, -1.3113417e-08, 0.3, -4.5298744e-08, 0.3, 1.3113417e-08, 0.175, 0.105, 0.25)
text = "0000.00
Uni"
font_size = 24
outline_size = 7

[node name="More" parent="." instance=ExtResource("2_h2hu0")]
unique_name_in_owner = true
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0.175, 0.1, 0.35)
description = "increase"

[node name="MeshInstance3D" type="MeshInstance3D" parent="More"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
cast_shadow = 0
mesh = SubResource("QuadMesh_5sv2v")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("3_h2hu0")

[node name="Less" parent="." instance=ExtResource("2_h2hu0")]
unique_name_in_owner = true
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0.175, 0.1, 0.15)
description = "decrease"

[node name="MeshInstance3D" type="MeshInstance3D" parent="Less"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00999999, 0)
cast_shadow = 0
mesh = SubResource("QuadMesh_5sv2v")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("4_5h15h")

[node name="Display" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0.325, 0.105, 0.25)
sorting_offset = 1.0
mesh = SubResource("QuadMesh_0kyjx")
surface_material_override/0 = SubResource("StandardMaterial3D_h2hu0")

[node name="Case" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.05, 0.25)
mesh = SubResource("BoxMesh_0kyjx")
skeleton = NodePath("../CenterOfMass")
surface_material_override/0 = SubResource("StandardMaterial3D_8dutg")

[node name="CenterOfMass" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.025, 0.25)

[node name="Connection" parent="." instance=ExtResource("5_awiax")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Connection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0, 0.25)
shape = SubResource("BoxShape3D_3fopc")

[node name="SignalConnection" parent="." instance=ExtResource("6_n3ijd")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SignalConnection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0, 0.25)
shape = SubResource("SphereShape3D_swh12")

[node name="SignalControl" parent="SignalConnection" instance=ExtResource("7_5h15h")]
unique_name_in_owner = true

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(48, 128)

[node name="ColorRect" type="ColorRect" parent="SubViewport"]
unique_name_in_owner = true
offset_right = 48.0
offset_bottom = 128.0
script = ExtResource("7_h2hu0")

[connection signal="pressed" from="More" to="SignalConnection/SignalControl" method="incr_step"]
[connection signal="pressed" from="Less" to="SignalConnection/SignalControl" method="decr_step"]
[connection signal="changed" from="SignalConnection/SignalControl" to="." method="_on_signal_control_changed"]
